--- a/manifest.json
+++ b/manifest.json
@@ -24,11 +24,6 @@
             "sizes": "128x128"
         },
         {
-            "src": "img/icons/icon-144.png",
-            "type": "image/png",
-            "sizes": "144x144"
-        },
-        {
             "src": "img/icons/icon-152.png",
             "type": "image/png",
             "sizes": "152x152"
@@ -36,7 +31,8 @@
         {
             "src": "img/icons/icon-196.png",
             "type": "image/png",
-            "sizes": "196x196"
+            "sizes": "196x196",
+            "purpose": "any maskable"
         },
         {
             "src": "img/icons/icon-256.png",
