--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,12 @@
             "sizes": "128x128"
         },
         {
+            "src": "img/icons/icon-144.png",
+            "type": "image/png",
+            "sizes": "144x144",
+            "purpose": "any maskable"
+        },
+        {
             "src": "img/icons/icon-152.png",
             "type": "image/png",
             "sizes": "152x152"
@@ -31,8 +37,7 @@
         {
             "src": "img/icons/icon-196.png",
             "type": "image/png",
-            "sizes": "196x196",
-            "purpose": "any maskable"
+            "sizes": "196x196"
         },
         {
             "src": "img/icons/icon-256.png",
